# Dialogs

./: CMakeLists.txt  ColorDialog.cpp  ColorDialog.h  CustomDialog.cpp  CustomDialog.h  Dialogs.dsp  Dialogs.h  Dialogs.plg  FolderDialog.cpp  FolderDialog.h  FontDialog.cpp  FontDialog.h  OpenDialog.cpp  OpenDialog.h  README.md  SaveDialog.cpp  SaveDialog.h
