cmake_minimum_required(VERSION 3.0)

project(dialogs)

add_library(dialogs
    ColorDialog.cpp
    ColorDialog.h
    CustomDialog.cpp
    CustomDialog.h
    Dialogs.dsp
    Dialogs.h
    FolderDialog.cpp
    FolderDialog.h
    FontDialog.cpp
    FontDialog.h
    OpenDialog.cpp
    OpenDialog.h
    SaveDialog.cpp
    SaveDialog.h
    )
